Regression: Alembic containing animated curves / hair no longer working #51586

Closed
opened 2017-05-22 11:57:10 +02:00 by Steffen Dünner · 6 comments

System Information
Win10 x64 Build 1703
nVidia GTX 780 3GB - Latest drivers

Blender Version
Broken: Current Buildbot builds
Worked: Official 2.78c

Short description of error
Importing an Alembic containing animated curves (exported from Blender 2.78c hair dynamics) no longer gives animated curves but just imports the static curves and the SRT animation of the emitter object.
It also throws an error message: "Object type mismatch, Alembic object path points to Curves"
Official 2.78c and Houdini 16 both import the Alembic just fine.

Exact steps for others to reproduce the error

  • New scene, either use the default cube or create a new one
  • Set some animated keyframes on e.g. the location of the cube, just so it moves over time
  • Add a hair emitter to the animated cube
  • Activate dynamics
  • Bake dynamics
  • Export the scene to Alembic (there's another regression with this: Buildbot builds will crash if you set hair "Children" to "Simple" or "Interpolated")
  • New scene
  • Open Alembic (you can also just open the attached file exported from official 2.78c)
  • In 2.78c the strands and the cube are animated and deformed, the only problem is that both the cube and the curves object are parented under an animated empty which results in a doubled animation -> just set the influence of the Transform Cache of this empty to 0.
  • In 2.78.5 from Buildbot the animation of the cube gets imported correctly, no additional empty as a parent. The hair strands also follow the cube but they're no longer deformed but stay in the shape of the first frame.untitled_2.abc
**System Information** Win10 x64 Build 1703 nVidia GTX 780 3GB - Latest drivers **Blender Version** Broken: Current Buildbot builds Worked: Official 2.78c **Short description of error** Importing an Alembic containing animated curves (exported from Blender 2.78c hair dynamics) no longer gives animated curves but just imports the static curves and the SRT animation of the emitter object. It also throws an error message: "Object type mismatch, Alembic object path points to Curves" Official 2.78c and Houdini 16 both import the Alembic just fine. **Exact steps for others to reproduce the error** - New scene, either use the default cube or create a new one - Set some animated keyframes on e.g. the location of the cube, just so it moves over time - Add a hair emitter to the animated cube - Activate dynamics - Bake dynamics - Export the scene to Alembic (there's another regression with this: Buildbot builds will crash if you set hair "Children" to "Simple" or "Interpolated") - New scene - Open Alembic (you can also just open the attached file exported from official 2.78c) - In 2.78c the strands and the cube are animated and deformed, the only problem is that both the cube and the curves object are parented under an animated empty which results in a doubled animation -> just set the influence of the Transform Cache of this empty to 0. - In 2.78.5 from Buildbot the animation of the cube gets imported correctly, no additional empty as a parent. The hair strands also follow the cube but they're no longer deformed but stay in the shape of the first frame.[untitled_2.abc](https://archive.blender.org/developer/F606014/untitled_2.abc)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @SteffenD

Added subscriber: @SteffenD

Added subscribers: @dr.sybren, @Sergey

Added subscribers: @dr.sybren, @Sergey
Sybren A. Stüvel was assigned by Sergey Sharybin 2017-05-22 12:37:47 +02:00

@dr.sybren, mind having a look here? Thanks! :)

@dr.sybren, mind having a look here? Thanks! :)

This issue was referenced by ad27e97ee7

This issue was referenced by ad27e97ee70e9f26bdd4121b285da3b120d376e0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51586
No description provided.