Fix T51586: Regression: Alembic containing animated curves / hair no longer working

Also fixed the same type of error when reading points.